# Image_Painter

./: CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt  image_painter.cpp  image_painter.h  image_painter.py  image_painter_convert.cpp  image_painter_draw.cpp  image_painter_render.cpp
src/fonts/: CMakeLists.txt  assic_fonts.cpp  assic_fonts.h
test/: test_image_painter.cpp
